# telegrambotcli

./: README.md  pyproject.toml
aiogram_gen/: main.py  templates.py
telegrambotcli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
